# add_executable(go2_trajectory_follow go2_trajectory_follow.cpp)
# target_link_libraries(go2_trajectory_follow unitree_sdk2)

add_executable(go2_sport_client go2_sport_client.cpp)
target_link_libraries(go2_sport_client unitree_sdk2)

add_executable(go2_low_level go2_low_level.cpp)
target_link_libraries(go2_low_level unitree_sdk2)

add_executable(go2_stand_example go2_stand_example.cpp)
target_link_libraries(go2_stand_example unitree_sdk2)


add_executable(go2_robot_state_client go2_robot_state_client.cpp)
target_link_libraries(go2_robot_state_client unitree_sdk2)

add_executable(go2_video_client go2_video_client.cpp)
target_link_libraries(go2_video_client unitree_sdk2)

add_executable(go2_vui_client go2_vui_client.cpp)
target_link_libraries(go2_vui_client unitree_sdk2)

add_executable(go2_simple_keyboard go2_simple_keyboard.cpp)
target_link_libraries(go2_simple_keyboard unitree_sdk2)

add_executable(go2_autonomous_navigation go2_autonomous_navigation.cpp)
target_link_libraries(go2_autonomous_navigation unitree_sdk2)

add_executable(go2_imu_straight_control go2_imu_straight_control.cpp)
target_link_libraries(go2_imu_straight_control unitree_sdk2)

add_executable(go2_lidar_obstacle_avoidance go2_lidar_obstacle_avoidance.cpp)
target_link_libraries(go2_lidar_obstacle_avoidance unitree_sdk2)

add_executable(lidar_switch ../../lidar_switch.cpp)
target_link_libraries(lidar_switch unitree_sdk2)
